[bug fix] Attempt to solve overflow:hidden not working on mobile devices.

--- a/ui_components/content-loader/css_include.css
+++ b/ui_components/content-loader/css_include.css
@@ -50,6 +50,7 @@
 
     justify-content: center;
     display: flex;
+    overflow:hidden;
 }
 
 /*Grid*/
